Remove unnecessary files from build

--- a/junithelper/build.properties
+++ b/junithelper/build.properties
@@ -8,4 +8,11 @@ bin.includes = plugin.xml,\
                icon/,\
                lib/,\
                lib/juniversalchardet-1.0.3.jar
+bin.excludes = lib/cglib-nodep-2.1_3.jar,\
+               lib/easymock-2.4.jar,\
+               lib/easymockclassextension-2.4.jar,\
+               lib/jmock2/,\
+               lib/jmockit/,\
+               lib/junit-4.4.jar,\
+               lib/mockito-all-1.8.2.jar
 
