--- a/junithelper/.classpath
+++ b/junithelper/.classpath
@@ -1,6 +1,8 @@
 <classpath>
   <classpathentry kind="src" path="src/main/java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="src" path="src/test/java" output="target/test-classes"/>
+  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
   <classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
@@ -31,7 +33,6 @@
       <attribute value="jar:file:/C:/Documents%20and%20Settings/k-sera/.m2/repository/org/jmock/jmock-legacy/2.5.1/jmock-legacy-2.5.1-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/mockit/jmockit/0.999.2/jmockit-0.999.2.jar" sourcepath="M2_REPO/mockit/jmockit/0.999.2/jmockit-0.999.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit/junit/4.5/junit-4.5.jar" sourcepath="M2_REPO/junit/junit/4.5/junit-4.5-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/junit-addons/junit-addons/1.4/junit-addons-1.4.jar"/>
   <classpathentry kind="lib" path="lib/juniversalchardet-1.0.3.jar"/>
