--- a/junithelper/build.properties
+++ b/junithelper/build.properties
@@ -7,7 +7,8 @@ bin.includes = plugin.xml,\
                about.ini,\
                icon/,\
                lib/,\
-               lib/juniversalchardet-1.0.3.jar
+               lib/juniversalchardet-1.0.3.jar,\
+               releasenotes.html
 bin.excludes = lib/cglib-nodep-2.1_3.jar,\
                lib/easymock-2.4.jar,\
                lib/easymockclassextension-2.4.jar,\
