Updated project settings

--- a/junithelper/.project
+++ b/junithelper/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>plugin</name>
+  <name>junithelper</name>
   <comment>JUnit Helper Eclipse Plugin</comment>
   <projects/>
   <buildSpec>
