--- a/junithelper/.settings/org.eclipse.jdt.core.prefs
+++ b/junithelper/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,11 @@
-#Thu Sep 02 11:57:54 JST 2010
+#Wed Sep 08 23:20:56 JST 2010
+encoding//src/main/java=UTF-8
 org.eclipse.jdt.core.compiler.debug.localVariable=generate
 org.eclipse.jdt.core.compiler.compliance=1.6
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
+encoding//src/main/resources=UTF-8
+encoding//src/test/resources=UTF-8
+encoding//src/test/java=UTF-8
 org.eclipse.jdt.core.compiler.debug.sourceFile=generate
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
