--- a/junithelper/.project
+++ b/junithelper/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>junithelper</name>
+  <name>plugin</name>
   <comment>JUnit Helper Eclipse Plugin. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
