--- a/junithelper/pom.xml
+++ b/junithelper/pom.xml
@@ -27,7 +27,24 @@
 		<url>http://code.google.com/p/junithelper/issues/list</url>
 	</issueManagement>
 
-	<repositories/>
+	<repositories>
+		<repository>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+				<checksumPolicy>warn</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
+			<id>java.net</id>
+			<name>java.net repo</name>
+			<url>http://download.java.net/maven/2</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 
 	<pluginRepositories/>
 
