--- a/junithelper-plugin/build.properties
+++ b/junithelper-plugin/build.properties
@@ -8,7 +8,9 @@ bin.includes = plugin.xml,\
                icon/,\
                lib/,\
                lib/juniversalchardet-1.0.3.jar,\
-               releasenotes.html
+               releasenotes.html,\
+               lib/commons-io-2.0.jar,\
+               lib/junithelper-core-0.9.1.jar
 bin.excludes = lib/cglib-nodep-2.1_3.jar,\
                lib/easymock-2.4.jar,\
                lib/easymockclassextension-2.4.jar,\
