--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -18,6 +18,6 @@ testMethodName.argsAreaPrefix:A
 testMethodName.argsAreaDelimiter:$
 testMethodName.returnAreaPrefix:R
 testMethodName.returnAreaDelimiter:$
-testMethodName.exceptionAreaPrefix:E
+testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:Mockito
