Modified project setting

--- a/junithelper-core/.project
+++ b/junithelper-core/.project
@@ -1,6 +1,6 @@
 <projectDescription>
   <name>junithelper-core</name>
-  <comment/>
+  <comment>JUnit Helper core modules</comment>
   <projects/>
   <buildSpec>
     <buildCommand>
