--- a/junithelper-plugin/about.ini
+++ b/junithelper-plugin/about.ini
@@ -9,7 +9,8 @@ appName=JUnit Helper
 # Property "aboutText" contains blurb for "About" dialog (translated)
 aboutText=JUnit Helper\n\
 \n\
-"JUnit Helper" is a project to reduce frustrations of Java unit-testing on Eclipse IDE by getting off the routine works when making test cases.\n\
+"JUnit Helper" is a product to support JUnit testing which provides CUI interface and Eclipse plugin.\n\
+It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test cases.\n\
 Visit http://junithelper.org/\n\
 \n\
 Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.\n\
