--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -1,8 +1,10 @@
-# JUnit Helper version 0.9.3
+# JUnit Helper version 0.9.4
+# language:en/ja
 language:en
 outputFileEncoding:UTF-8
 directoryPathOfProductSourceCode:src/main/java
 directoryPathOfTestSourceCode:src/test/java
+# junitVersion:version3/version4
 junitVersion:version4
 testCaseClassNameToExtend:junit.framework.TestCase
 isTemplateImplementationRequired:true
@@ -20,4 +22,5 @@ testMethodName.returnAreaPrefix:R
 testMethodName.returnAreaDelimiter:$
 testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
+# mockObjectFramework:Mockito/JMock2/JMockit/EasyMock
 mockObjectFramework:Mockito
