--- a/junithelper-eclipse-plugin/about.ini
+++ b/junithelper-eclipse-plugin/about.ini
@@ -9,8 +9,8 @@ appName=JUnit Helper
 # Property "aboutText" contains blurb for "About" dialog (translated)
 aboutText=JUnit Helper\n\
 \n\
-"JUnit Helper" is a product to support JUnit testing which provides CUI interface and Eclipse plugin.\n\
-It supports to cover all the tests for public, protected and package local methods by making it easier to start writing new test cases.\n\
+"JUnit Helper" is an open-source project helping JUnit users to cover all tests for public, protected and package local methods by saving much labor to start writing new test cases.\n\
+Eclipse plugin also has an advantage of making it easier to go back and forth between developing class and test class by "Alt + 8 "(test->dev) and "Alt + 9"(dev->test).\n\
 Visit http://junithelper.org/\n\
 \n\
 Copyright (c) 2009, 2010 JUnit Helper project committers and others.  All rights reserved.\n\
