--- a/junithelper-core/pom.xml
+++ b/junithelper-core/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.junithelper</groupId>
     <artifactId>junithelper-core</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>junithelper-core</name>
@@ -14,6 +14,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jmockit.version>0.999.2</jmockit.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>releases</id>
+            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/releases</url>
+        </repository>
+        <repository>
+            <id>snapshots</id>
+            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/snapshots</url>
+        </repository>
+    </repositories>
 
     <build>
         <resources>
@@ -70,6 +81,7 @@
 
     <dependencies>
         <!-- juniversalchardet -->
+        <!--
         <dependency>
             <groupId>juniversalchardet</groupId>
             <artifactId>juniversalchardet</artifactId>
@@ -77,12 +89,17 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/juniversalchardet-1.0.3.jar</systemPath>
         </dependency>
+        -->
+        <dependency>
+            <groupId>org.mozilla</groupId>
+            <artifactId>juniversalchardet</artifactId>
+            <version>1.0.3</version>
+        </dependency>
         <!-- Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.0</version>
-            <scope>compile</scope>
         </dependency>
         <!-- JUnit -->
         <dependency>
