--- a/maven-junithelper-plugin/pom.xml
+++ b/maven-junithelper-plugin/pom.xml
@@ -37,7 +37,7 @@
             <plugin>
                 <groupId>org.junithelper</groupId>
                 <artifactId>maven-junithelper-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.1</version>
             </plugin>
         </plugins>
     </build>
