--- a/maven-junithelper-plugin/pom.xml
+++ b/maven-junithelper-plugin/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.junithelper</groupId>
     <artifactId>maven-junithelper-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0</version>
+    <version>1.1</version>
     <name>maven-junithelper-plugin Maven Mojo</name>
     <url>http://junithelper.org</url>
 
@@ -18,6 +18,13 @@
             <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/snapshots</url>
         </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>junithelper.org releases</id>
+            <url>http://junithelper.googlecode.com/svn/trunk/mvn-repo/releases</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
@@ -37,7 +44,8 @@
             <plugin>
                 <groupId>org.junithelper</groupId>
                 <artifactId>maven-junithelper-plugin</artifactId>
-                <version>1.1</version>
+                <configuration>
+                </configuration>
             </plugin>
         </plugins>
     </build>
