--- a/junithelper-core/pom.xml
+++ b/junithelper-core/pom.xml
@@ -33,6 +33,17 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <distributionManagement>
+        <repository>
+            <id>repo</id>
+            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshot-repo</id>
+            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <resources>
             <resource>
