--- a/maven-junithelper-plugin/pom.xml
+++ b/maven-junithelper-plugin/pom.xml
@@ -26,6 +26,17 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <distributionManagement>
+        <repository>
+            <id>repo</id>
+            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshot-repo</id>
+            <url>https://github.com/seratch/junithelper/raw/master/mvn-repo/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -63,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>org.mozilla</groupId>
-            <artifactId>universalchardet</artifactId>
+            <artifactId>juniversalchardet</artifactId>
             <version>1.0.3</version>
         </dependency>
         <dependency>
