Prepare for core 1.0.2

--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -23,4 +23,6 @@ testMethodName.returnAreaDelimiter:$
 testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
 # mockObjectFramework:Mockito/JMock2/JMockit/EasyMock
-mockObjectFramework:Mockito
+mockObjectFramework:
+# testingPatternExplicitComment:ArrangeActAssert/GivenWhenThen
+testingPatternExplicitComment:
