--- a/junithelper-core/src/test/resources/junithelper-config.properties
+++ b/junithelper-core/src/test/resources/junithelper-config.properties
@@ -21,3 +21,4 @@ testMethodName.returnAreaDelimiter:$
 testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:Mockito
+testingPatternExplicitComment:
