--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -1,4 +1,4 @@
-# JUnit Helper version 1.0.0
+# JUnit Helper version 1.0.2
 # language:en/ja
 language:en
 outputFileEncoding:UTF-8
@@ -23,4 +23,6 @@ testMethodName.returnAreaDelimiter:$
 testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
 # mockObjectFramework:Mockito/JMock2/JMockit/EasyMock
-mockObjectFramework:Mockito
+mockObjectFramework:
+# testingPatternExplicitComment:ArrangeActAssert/GivenWhenThen
+testingPatternExplicitComment:
