--- a/junithelper-eclipse-plugin/.project
+++ b/junithelper-eclipse-plugin/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>junithelper-eclipse-plugin</name>
+  <name>junithelper-plugin</name>
   <comment>JUnit Helper Eclipse Plugin</comment>
   <projects/>
   <buildSpec>
