Fixed Issue 58 Need to enable dropping specified pacakges or classes from test target

--- a/junithelper-core/src/test/resources/junithelper-config.properties
+++ b/junithelper-core/src/test/resources/junithelper-config.properties
@@ -11,6 +11,7 @@ target.isExceptionPatternRequired:true
 target.isPackageLocalMethodRequired:true
 target.isProtectedMethodRequired:true
 target.isPublicMethodRequired:true
+target.regexpCsvForExclusion:
 testMethodName.isArgsRequired:true
 testMethodName.isReturnRequired:false
 testMethodName.basicDelimiter:_
