--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -13,6 +13,7 @@ target.isExceptionPatternRequired:true
 target.isPackageLocalMethodRequired:true
 target.isProtectedMethodRequired:true
 target.isPublicMethodRequired:true
+target.regexpCsvForExclusion:org.junithelper.excluded.*,org.junithelper.tmp.Sample
 testMethodName.isArgsRequired:true
 testMethodName.isReturnRequired:false
 testMethodName.basicDelimiter:_
