Extension: loading configuration

--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -28,3 +28,5 @@ testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:
 # testingPatternExplicitComment:ArrangeActAssert/GivenWhenThen
 testingPatternExplicitComment:
+isExtensionEnabled:false
+extensionConfigXML:junithelper-extension.xml
