--- a/junithelper-core/src/test/resources/junithelper-config.properties
+++ b/junithelper-core/src/test/resources/junithelper-config.properties
@@ -23,3 +23,5 @@ testMethodName.exceptionAreaPrefix:T
 testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:Mockito
 testingPatternExplicitComment:
+isExtensionEnabled:true
+extensionConfigXML:junithelper-extension.xml
