--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -28,3 +28,5 @@ testMethodName.exceptionAreaDelimiter:$
 mockObjectFramework:
 # testingPatternExplicitComment:ArrangeActAssert/GivenWhenThen
 testingPatternExplicitComment:
+isExtensionEnabled:true
+extensionConfigXML:tools/junithelper-extension.xml
