--- a/junithelper-core/tools/junithelper-config.properties
+++ b/junithelper-core/tools/junithelper-config.properties
@@ -9,7 +9,7 @@ junitVersion:version4
 testCaseClassNameToExtend:junit.framework.TestCase
 isTemplateImplementationRequired:true
 target.isAccessorExcluded:true
-target.isExceptionPatternRequired:true
+target.isExceptionPatternRequired:false
 target.isPackageLocalMethodRequired:true
 target.isProtectedMethodRequired:true
 target.isPublicMethodRequired:true
