--- a/junithelper-core/src/test/resources/junithelper-config_forceLF.properties
+++ b/junithelper-core/src/test/resources/junithelper-config_forceLF.properties
@@ -2,7 +2,7 @@
 language:en
 outputFileEncoding:UTF-8
 # forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
-lineBreakPolicy=forceCRLF
+lineBreakPolicy=forceLF
 directoryPathOfProductSourceCode:src/main/java
 directoryPathOfTestSourceCode:src/test/java
 junitVersion:version4
