--- a/junithelper-core/release/junithelper-config.properties
+++ b/junithelper-core/release/junithelper-config.properties
@@ -2,6 +2,8 @@
 # language:en/ja
 language:en
 outputFileEncoding:UTF-8
+# forceCRLF/forceLF/forceNewFileCRLF/forceNewFileLF
+lineBreakPolicy=forceNewFileCRLF
 directoryPathOfProductSourceCode:src/main/java
 directoryPathOfTestSourceCode:src/test/java
 # junitVersion:version3/version4
